# Aria

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DECISION_LOG.md  DEPENDENCIES.md  PROJECT_HISTORY.md  README.md  ROADMAP.md  UPGRADES.md  aria  jarvis.env.example  main.py  pyproject.toml  pytest.ini  requirements-optional.txt  requirements.txt  ruff.toml  workstation
aria_acm/: LICENSE  NOTICE  VERSION.json  __init__.py
aria_core/: __init__.py  _delegate.py  acm_bridge.py  acm_harvest.py  acm_store_facade.py  applications.py  capabilities.py  capability_bus.py  capability_contracts.py  capability_registry.py  cognition.py  cognitive_orchestrator.py  conversation_trace.py  event_bus.py  event_contracts.py  event_types.py  events.py  identity.py  infrastructure.py  interfaces.py  knowledge.py  learning.py  learning_contracts.py  learning_manager.py  memory.py  memory_manager.py  observability.py  operations.py  ownership.py  planning.py  platform.py  reasoning.py  reference.py  reflex.py  reflex_engine.py  request_plan.py  response_composer.py  runtime.py  services.py
desktop/: ai-platform.desktop  ai-workstation-acceptance.desktop  ai-workstation-doctor.desktop  ai-workstation-repair.desktop  ai-workstation-start.desktop  ai-workstation-status.desktop  ai-workstation-stop.desktop  ai-workstation.desktop  aria-app.desktop  aria-native.desktop  aria-pyside.desktop  aria-uncensored.desktop  aria.desktop
docs/: ADDING_AN_ACTION.md  ARCHITECTURE_BOUNDARIES.md  ARIA_ACM_ARCHITECTURE.md  ARIA_ACM_IMPORT_PLAN.md  ARIA_CERTIFICATION_MATRIX_V2.md  BACKUP.md  CONFIG.md  (+48 more)
(+1148 files in other folders)
